# triangulation

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
notebooks/: test.ipynb
