[tool.poetry]
name = "triangulation"
version = "0.1.0"
description = ""
authors = ["Lucy Bowles"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
coverage = "^7.0.5"
mypy = "^0.991"
ruff = "^0.0.269"
pre-commit = "^3.3.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
dynamic_context = "test_function"
source = ["example_repo"]  # Uncomment and replace with package name for coverage information.

[tool.ruff]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "RUF100" # enforce that your noqa directives are "valid"
]
target-version = "py310"
